# img2h3m

./: Cargo.toml  LICENSE  README.md
maps/: obstacles.h3m
src/: cli.rs  config.rs  lib.rs  main.rs  palettes.rs
src/common/: index_multiset.rs  mod.rs  position.rs
src/common/position/: generic.rs  mod.rs
src/h3m/: enums.rs  mod.rs  object_templates_set.rs  parsers.rs  result.rs  surface.rs
src/h3m/obstacle_generator/: common.rs  filename_to_template_index_map.rs  map_area.rs  mod.rs  obstacle_cell.rs  obstacle_template.rs  obstacle_template_factory.rs  obstacle_template_list.rs  obstacle_templates.rs  template_class.rs  template_index_set.rs
src/h3m/obstacle_generator/obstacle_map/: areas_layout.rs  located_obstacle.rs  mod.rs  obstacle_map_area.rs  obstacle_map_cell.rs  obstacle_positions.rs  sparsity_validator.rs
src/h3m/obstacle_generator/obstacle_template/: cell_validator.rs  factory.rs  mod.rs  multi_sparsity.rs  overlap_map.rs  sparsity.rs  tile_side.rs
src/h3m/parser/: common.rs  conditions.rs  header.rs  hero_settings.rs  mod.rs  object_templates.rs  objects.rs  players.rs
src/h3m/parsers/: common.rs  conditions.rs  header.rs  hero_settings.rs  mod.rs  object_templates.rs  objects.rs  players.rs
src/h3m/terrain_map/: draft_map_cell.rs  draft_terrain_map.rs  map_cell.rs  mod.rs  tile.rs  tile_code_generator.rs  tile_codes_set.rs  tile_generator.rs  tile_index_set.rs  tile_type.rs  tiles_generator.rs
src/h3m/terrain_map/draft_terrain_map/: draft_map_cell.rs  mod.rs
src/map_image/: mod.rs  palettes.rs  surface_check.rs  terrain_check.rs
(+9 files in other folders)
