[package]
name = "img2h3m"
version = "0.4.0"
authors = ["sn-blg"]
edition = "2021"
description = "CLI utility for converting an image to a HoMM3 HotA map"
license = "MIT"

[dependencies]
clap = "2.33.3"
libflate = "1.1.1"
byteorder = "1.4.3"
rand = "0.8.4"
image = "0.23.14"
delta_e = "0.2.1"
hashbag = "0.1.4"

[profile.release]
opt-level = 'z'  # Optimize for size
lto = true
panic = 'abort'
